kube/base/fluentd.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: fluentd
  namespace: kube-system
  labels:
    app: fluentd
    kubernetes.io/cluster-service: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fluentd
  template:
    metadata:
      labels:
        app: fluentd
        kubernetes.io/cluster-service: "true"
    spec:
      serviceAccount: fluentd
      serviceAccountName: fluentd
      tolerations:
      - key: node-role.kubernetes.io/master
      effect: NoSchedule
      containers:
      - name: fluentd
        image: fluent/fluentd-kubernetes-daemonset:v1.11.5-debian-elasticsearch7-1.1
        imagePullPolicy: Always
        ports:
        - containerPort: 9200
        resources:
          limits:
            memory: 300Mi
        volumeMounts:
        - name: fluentd-volume
          mountPath: /var/log
          readOnly: true
          subPath: varlogs
        - name: fluentd-volume
          mountPath: /var/lib/docker/containers
          readOnly: true
          subPath: varlibdockercontainers
      containers:
      - name: fluentd-volume
        persistentVolumeClaim:
          claimName: fluentd-volume-claim
