kube/base/elastic-search.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elastic-search
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elastic-search
  template:
    metadata:
      labels:
        app: elastic-search
    spec:
      containers:
      - name: elastic-search
        image: docker.elastic.co/elasticsearch/elasticsearch:7.10.1
        imagePullPolicy: Always
        ports:
        - containerPort: 9200
        resources:
          limits:
            memory: 300Mi
---
apiVersion: v1
kind: Service
metadata:
  name: elastic-search
spec:
  selector:
    app: elastic-search
  ports:
  - port: 9200
    targetPort: 9200
