kube/base/jenkins.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jenkins
spec:
  selector:
    matchLabels:
      app: jenkins-pod
  serviceName: jenkins
  replicas: 1 
  template:
    metadata:
      labels:
        app: jenkins-pod
    spec:
      terminationGracePeriodSeconds: 60
      securityContext:
        runAsUser: 0
      containers:
      - name: jenkins
        image: jenkins/jenkins:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http-port
        - containerPort: 50000
          name: jnlp
        volumeMounts:
        - name: jenkins-volume
          mountPath: /var/jenkins_vol
  volumeClaimTemplates:
    - metadata:
        name: jenkins-volume
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: managed-premium
        resources:
          requests:
            storage: 5Gi
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-ui
spec:
  type: LoadBalancer
  selector: 
    app: jenkins-pod
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-discovery
spec:
  selector: 
    app: jenkins-pod
  ports:
    - port: 50000
      targetPort: 50000
