kube/base/redis.yml
apiVersion: v1
kind: Service
metadata:
  name: primary
spec:
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 6379
    targetPort: 6379
    name: redis
  selector:
    name: redis-primary
---
apiVersion: v1
kind: Service
metadata:
  name: replica
spec:
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 6379
    targetPort: 6379
    name: redis
  selector:
    name: redis-replica
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: primary-deployment
  labels:
    name: redis-primary
spec:
  replicas: 1 
  selector:
    matchLabels:
      name: redis-primary
  template:
    metadata:
      labels:
        name: redis-primary
    spec:
      subdomain: primary
      containers:
      - name: redis
        image: redis:3.2.0-alpine
        command:
          - "redis-server"
        args:
          - "--protected-mode"
          - "no"
        ports:
        - containerPort: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: replica-deployment
  labels:
    name: redis-replica
spec:
  replicas: 2 
  selector:
    matchLabels:
      name: redis-replica
  template:
    metadata:
      labels:
        name: redis-replica
    spec:
      subdomain: replica
      containers:
      - name: redis
        image: redis:3.2.0-alpine
        command:
          - "redis-server"
        args:
          - "--slaveof"
          - "primary.default.svc.cluster.local"
          - "6379"
          - "--protected-mode"
          - "no"   
        ports:
        - containerPort: 6379
