kube/base/user-mongo.yml
#kind: StorageClass
#apiVersion: storage.k8s.io/v1
#metadata:
#  name: mongo-user-sc
#provisioner: kubernetes.io/azure-disk
#mountOptions:
#  - dir_mode=0777
#  - file_mode=0777
#  - uid=0
#  - gid=0
#  - mfsymlinks
#  - cache=strict
#parameters:
#  skuName: Standard_LRS
#---

# each replica pod gets a unique PersistentVolumeClaim associated with it
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo-user
spec:
  selector:
    matchLabels:
      app: mongo-user-db
  serviceName: mongo-user
  replicas: 1 
  template:
    metadata:
      labels:
        app: mongo-user-db
    spec:
      securityContext:
        runAsUser: 0
      terminationGracePeriodSeconds: 60
      containers:
      - name: mongo
        image: mongo:4.0.21
        ports:
        - containerPort: 27017
          name: mongo
        volumeMounts:
        - name: mongo-volume
          mountPath: /data/db
  volumeClaimTemplates:
    - metadata:
        name: mongo-volume
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: managed-premium
        resources:
          requests:
            storage: 5Gi
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-user
spec:
  selector: 
    app: mongo-user-db
  ports:
    - port: 27017
      targetPort: 27017
