kube/base/video.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: video
spec:
  replicas: 1
  selector:
    matchLabels:
      app: video
  template:
    metadata:
      labels:
        app: video
    spec:
      containers:
      - name: video-container
        image: acrekstest.azurecr.io/azure-video-microservice:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: 300Mi
        livenessProbe:
          httpGet:
            scheme: HTTP
            path: /api/v1/actuator/info
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 20
          successThreshold: 1
        readinessProbe:
          httpGet:
            scheme: HTTP
            path: /api/v1/actuator/health
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
          successThreshold: 1
        volumeMounts:
        - name: configmap-video-volume
          mountPath: /resources-config
      volumes:
      - name: configmap-video-volume
        configMap:
          name: configmap-video
---
apiVersion: v1
kind: Service
metadata:
  name: video
spec:
  selector:
    app: video
  ports:
  - port: 80
    targetPort: 80
